// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectUserList /> should render correctly 1`] = `
<Field
  autoload={true}
  clearable={true}
  component={[Function]}
  disabled={false}
  id="userList"
  inputClassName="fake-inputClassName"
  label="userLsit"
  labelClassName="control-label"
  loadOptions={[Function]}
  multi={true}
  name="userList"
/>
`;

exports[`<SelectUserList /> should render correctly with false value 1`] = `
<Field
  autoload={true}
  clearable={false}
  component={[Function]}
  disabled={true}
  id="userList"
  inputClassName="fake-inputClassName"
  label="userLsit"
  labelClassName="control-label"
  loadOptions={[Function]}
  multi={false}
  name="userList"
/>
`;
